[gd_scene load_steps=7 format=4 uid="uid://e4jft171ridq"]

[ext_resource type="Texture2D" uid="uid://cijx17t6btaeq" path="res://Assets/BattleCity2.png" id="1_jjgbg"]
[ext_resource type="PackedScene" uid="uid://ch8vjmct54i7e" path="res://Scenes/player.tscn" id="2_bo1nx"]
[ext_resource type="Script" uid="uid://bcsy3tdh1o71l" path="res://Scripts/enemy_spawner.gd" id="3_8gbba"]
[ext_resource type="PackedScene" uid="uid://ccjrxfkillirw" path="res://Scenes/eagle.tscn" id="4_jjvhh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bo1nx"]
texture = ExtResource("1_jjgbg")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:8/0/custom_data_0 = true
2:8/0 = 0
3:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
0:10/0 = 0
1:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
0:11/0 = 0
1:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0

[sub_resource type="TileSet" id="TileSet_8gbba"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 5
custom_data_layer_0/name = "can_be_destroyed"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_bo1nx")

[node name="main" type="Node"]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="TileMapLayer" type="TileMapLayer" parent="." groups=["tilemap_layer"]]
position = Vector2(8, 0)
tile_map_data = PackedByteArray("AAD9/wwAAAABAAgAAAD9/wsAAAABAAgAAAD9/woAAAABAAgAAAD+/woAAAABAAgAAAD//woAAAABAAgAAAAAAAoAAAABAAgAAAAAAAsAAAABAAgAAAAAAAwAAAABAAgAAAD9//7/AAABAAgAAAD9////AAABAAgAAAD9/wAAAAABAAgAAAD9/wEAAAABAAgAAAD9/wIAAAABAAgAAAD9/wMAAAABAAgAAAD9/wQAAAABAAgAAAD9/wUAAAABAAgAAAD9/wYAAAABAAgAAAD9/wcAAAABAAgAAAD+////AAABAAgAAAD+/wAAAAABAAgAAAD+/wEAAAABAAgAAAD+/wIAAAABAAgAAAD+/wMAAAABAAgAAAD+/wQAAAABAAgAAAD/////AAABAAgAAAD//wAAAAABAAgAAAD//wEAAAABAAgAAAD//wIAAAABAAgAAAD//wMAAAABAAgAAAD//wQAAAABAAgAAAAAAP//AAABAAgAAAAAAAAAAAABAAgAAAAAAAEAAAABAAgAAAAAAAIAAAABAAgAAAAAAAMAAAABAAgAAAAAAAQAAAABAAgAAAABAP7/AAABAAgAAAABAP//AAABAAgAAAABAAAAAAABAAgAAAABAAEAAAABAAgAAAABAAIAAAABAAgAAAABAAMAAAABAAgAAAABAAQAAAABAAgAAAABAAUAAAABAAgAAAABAAYAAAABAAgAAAABAAcAAAABAAgAAAD8//7/AAABAAgAAAD8////AAABAAgAAAD8/wAAAAABAAgAAAD8/wEAAAABAAgAAAD8/wIAAAABAAgAAAD8/wMAAAABAAgAAAD8/wQAAAABAAgAAAD8/wUAAAABAAgAAAD8/wYAAAABAAgAAAD8/wcAAAABAAgAAAAAAP7/AAABAAgAAAAAAAUAAAABAAgAAAAAAAYAAAABAAgAAAAAAAcAAAABAAgAAAAEAAAAAAABAAgAAAAFAAAAAAABAAgAAAAEAAEAAAABAAgAAAAEAAIAAAABAAgAAAAEAAMAAAABAAgAAAAEAAQAAAABAAgAAAAEAAUAAAABAAgAAAAEAAYAAAABAAgAAAAEAAcAAAABAAgAAAAEAAgAAAABAAgAAAAEAAkAAAABAAgAAAAEAAoAAAABAAgAAAAFAAEAAAABAAgAAAAFAAIAAAABAAgAAAAFAAMAAAABAAgAAAAFAAQAAAABAAgAAAAFAAUAAAABAAgAAAAFAAYAAAABAAgAAAAFAAcAAAABAAgAAAAFAAgAAAABAAgAAAAFAAkAAAABAAgAAAAFAAoAAAABAAgAAAAIAAAAAAABAAgAAAAIAAEAAAABAAgAAAAIAAIAAAABAAgAAAAIAAMAAAABAAgAAAAIAAQAAAABAAgAAAAIAAUAAAABAAgAAAAIAAYAAAABAAgAAAAIAAcAAAABAAgAAAAIAAgAAAABAAgAAAAIAAkAAAABAAgAAAAJAAAAAAABAAgAAAAJAAEAAAABAAgAAAAJAAIAAAABAAgAAAAJAAMAAAABAAgAAAAJAAQAAAABAAgAAAAJAAUAAAABAAgAAAAJAAYAAAABAAgAAAAJAAcAAAABAAgAAAAJAAgAAAABAAgAAAAJAAkAAAABAAgAAAAIAAoAAAABAAgAAAAJAAoAAAABAAgAAAAEAPz/AAABAAgAAAAFAPz/AAABAAgAAAAEAP3/AAABAAgAAAAFAP3/AAABAAgAAAAGAP3/AAABAAgAAAAHAP3/AAABAAgAAAAGAPz/AAABAAgAAAAHAPz/AAABAAgAAAAKAPz/AAABAAgAAAALAPz/AAABAAgAAAD4/wAAAAABAAgAAAD5/wAAAAABAAgAAAD4/wEAAAABAAgAAAD4/wIAAAABAAgAAAD4/wMAAAABAAgAAAD4/wQAAAABAAgAAAD4/wUAAAABAAgAAAD4/wYAAAABAAgAAAD4/wcAAAABAAgAAAD4/wgAAAABAAgAAAD4/wkAAAABAAgAAAD4/woAAAABAAgAAAD5/wEAAAABAAgAAAD5/wIAAAABAAgAAAD5/wMAAAABAAgAAAD5/wQAAAABAAgAAAD5/wUAAAABAAgAAAD5/wYAAAABAAgAAAD5/wcAAAABAAgAAAD5/wgAAAABAAgAAAD5/wkAAAABAAgAAAD5/woAAAABAAgAAAD0/wAAAAABAAgAAAD0/wEAAAABAAgAAAD0/wIAAAABAAgAAAD0/wMAAAABAAgAAAD0/wQAAAABAAgAAAD0/wUAAAABAAgAAAD0/wYAAAABAAgAAAD0/wcAAAABAAgAAAD0/wgAAAABAAgAAAD0/wkAAAABAAgAAAD1/wAAAAABAAgAAAD1/wEAAAABAAgAAAD1/wIAAAABAAgAAAD1/wMAAAABAAgAAAD1/wQAAAABAAgAAAD1/wUAAAABAAgAAAD1/wYAAAABAAgAAAD1/wcAAAABAAgAAAD1/wgAAAABAAgAAAD1/wkAAAABAAgAAAD0/woAAAABAAgAAAD1/woAAAABAAgAAAD4//z/AAABAAgAAAD5//z/AAABAAgAAAD2//z/AAABAAgAAAD2//3/AAABAAgAAAD3//z/AAABAAgAAAD3//3/AAABAAgAAAD4//3/AAABAAgAAAD5//3/AAABAAgAAAD8//r/AAABAAgAAAD8//v/AAABAAgAAAD9//r/AAABAAgAAAD9//v/AAABAAgAAAAAAPr/AAABAAgAAAAAAPv/AAABAAgAAAABAPr/AAABAAgAAAABAPv/AAABAAgAAADy//z/AAABAAgAAADz//z/AAABAAgAAAD0//X/AAABAAgAAAD0//b/AAABAAgAAAD0//f/AAABAAgAAAD0//j/AAABAAgAAAD0//n/AAABAAgAAAD1//X/AAABAAgAAAD1//b/AAABAAgAAAD1//f/AAABAAgAAAD1//j/AAABAAgAAAD1//n/AAABAAgAAAD4//X/AAABAAgAAAD4//b/AAABAAgAAAD4//f/AAABAAgAAAD4//j/AAABAAgAAAD4//n/AAABAAgAAAD5//X/AAABAAgAAAD5//b/AAABAAgAAAD5//f/AAABAAgAAAD5//j/AAABAAgAAAD5//n/AAABAAgAAAD8//X/AAABAAgAAAD8//b/AAABAAgAAAD8//f/AAABAAgAAAD9//X/AAABAAgAAAD9//b/AAABAAgAAAD9//f/AAABAAgAAAAAAPX/AAABAAgAAAAAAPb/AAABAAgAAAAAAPf/AAABAAgAAAABAPX/AAABAAgAAAABAPb/AAABAAgAAAABAPf/AAABAAgAAAAEAPX/AAABAAgAAAAEAPb/AAABAAgAAAAEAPf/AAABAAgAAAAEAPj/AAABAAgAAAAEAPn/AAABAAgAAAAFAPX/AAABAAgAAAAFAPb/AAABAAgAAAAFAPf/AAABAAgAAAAFAPj/AAABAAgAAAAFAPn/AAABAAgAAAAIAPX/AAABAAgAAAAIAPb/AAABAAgAAAAIAPf/AAABAAgAAAAIAPj/AAABAAgAAAAIAPn/AAABAAgAAAAJAPX/AAABAAgAAAAJAPb/AAABAAgAAAAJAPf/AAABAAgAAAAJAPj/AAABAAgAAAAJAPn/AAABAAgAAAAKAP3/AAAAAAgAAAALAP3/AAAAAAgAAADy//3/AAAAAAgAAADz//3/AAAAAAgAAADx//L/AAAAAAgAAADx/wgAAAAAAAgAAADx/wwAAAAAAAgAAADx/w0AAAAAAAgAAADx/wsAAAAAAAgAAADx/woAAAAAAAgAAADx/wkAAAAAAAgAAADx/wcAAAAAAAgAAADx/wYAAAAAAAgAAADx/wUAAAAAAAgAAADx/wQAAAAAAAgAAADx/wMAAAAAAAgAAADx/wIAAAAAAAgAAADx/wEAAAAAAAgAAADx/wAAAAAAAAgAAADx////AAAAAAgAAADx//7/AAAAAAgAAADx//3/AAAAAAgAAADx//z/AAAAAAgAAADx//v/AAAAAAgAAADx//r/AAAAAAgAAADx//n/AAAAAAgAAADx//j/AAAAAAgAAADx//f/AAAAAAgAAADx//b/AAAAAAgAAADx//X/AAAAAAgAAADx//T/AAAAAAgAAADx//P/AAAAAAgAAADy//L/AAAAAAgAAADz//L/AAAAAAgAAAD0//L/AAAAAAgAAAD1//L/AAAAAAgAAAD2//L/AAAAAAgAAAD3//L/AAAAAAgAAAD4//L/AAAAAAgAAAD5//L/AAAAAAgAAAD6//L/AAAAAAgAAAD7//L/AAAAAAgAAAD8//L/AAAAAAgAAAD9//L/AAAAAAgAAAD+//L/AAAAAAgAAAD///L/AAAAAAgAAAAAAPL/AAAAAAgAAAABAPL/AAAAAAgAAAACAPL/AAAAAAgAAAADAPL/AAAAAAgAAAAEAPL/AAAAAAgAAAAFAPL/AAAAAAgAAAAGAPL/AAAAAAgAAAAHAPL/AAAAAAgAAAAIAPL/AAAAAAgAAAAJAPL/AAAAAAgAAAAKAPL/AAAAAAgAAAALAPL/AAAAAAgAAAAMAPL/AAAAAAgAAAAMAPP/AAAAAAgAAAAMAPT/AAAAAAgAAAAMAPX/AAAAAAgAAAAMAPb/AAAAAAgAAAAMAPf/AAAAAAgAAAAMAPj/AAAAAAgAAAAMAPn/AAAAAAgAAAAMAPr/AAAAAAgAAAAMAPv/AAAAAAgAAAAMAPz/AAAAAAgAAAAMAP3/AAAAAAgAAAAMAP7/AAAAAAgAAAAMAP//AAAAAAgAAAAMAAAAAAAAAAgAAAAMAAEAAAAAAAgAAAAMAAIAAAAAAAgAAAAMAAMAAAAAAAgAAAAMAAQAAAAAAAgAAAAMAAUAAAAAAAgAAAAMAAYAAAAAAAgAAAAMAAcAAAAAAAgAAAAMAAgAAAAAAAgAAAAMAAkAAAAAAAgAAAAMAAoAAAAAAAgAAAAMAAsAAAAAAAgAAAAMAAwAAAAAAAgAAADx/w4AAAAAAAgAAADy/w4AAAAAAAgAAADz/w4AAAAAAAgAAAD0/w4AAAAAAAgAAAD1/w4AAAAAAAgAAAD2/w4AAAAAAAgAAAD3/w4AAAAAAAgAAAD4/w4AAAAAAAgAAAD5/w4AAAAAAAgAAAD6/w4AAAAAAAgAAAD7/w4AAAAAAAgAAAD8/w4AAAAAAAgAAAD9/w4AAAAAAAgAAAD9/w0AAAAAAAgAAAD+/w0AAAAAAAgAAAD//w0AAAAAAAgAAAAAAA0AAAAAAAgAAAAAAA4AAAAAAAgAAAABAA4AAAAAAAgAAAACAA4AAAAAAAgAAAADAA4AAAAAAAgAAAAEAA4AAAAAAAgAAAAFAA4AAAAAAAgAAAAGAA4AAAAAAAgAAAAHAA4AAAAAAAgAAAAIAA4AAAAAAAgAAAAJAA4AAAAAAAgAAAAKAA4AAAAAAAgAAAALAA4AAAAAAAgAAAAMAA4AAAAAAAgAAAAMAA0AAAAAAAgAAAA=")
tile_set = SubResource("TileSet_8gbba")

[node name="Player" parent="." instance=ExtResource("2_bo1nx")]
position = Vector2(0, -24)

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource("3_8gbba")

[node name="SpawnPoints" type="Node2D" parent="EnemySpawner"]

[node name="SpawnLeft" type="Marker2D" parent="EnemySpawner/SpawnPoints"]
position = Vector2(-96, -96)

[node name="SpawnCenter" type="Marker2D" parent="EnemySpawner/SpawnPoints"]
position = Vector2(0, -96)

[node name="SpawnRight" type="Marker2D" parent="EnemySpawner/SpawnPoints"]
position = Vector2(96, -96)

[node name="SpawnTimer" type="Timer" parent="EnemySpawner"]
one_shot = true
autostart = true

[node name="Eagle" parent="." instance=ExtResource("4_jjvhh")]
position = Vector2(0, 97)
